fixed post h1 for small screens; aligned left

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ h1 {
 	border-width: 4px;
 	border-color: black; 
 	padding: 0.8em;
+    text-align: left;
 }
 
 h2 {
